#bugFix fixed an issue with previewing pages, landing pages, and squeeze pages not showing correct preview. #bugFix fixed an issue with squeeze page close button was sometimes behind the modal.
git-svn-id: https://plugins.svn.wordpress.org/marketing-optimizer/trunk@920110 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/admin/css/jquery_ui.css
+++ b/admin/css/jquery_ui.css
@@ -1816,10 +1816,11 @@ height: 32px;
     padding: 1px;
     position: absolute;
     right: -15px;
-    top: -9%;
+    top: -17px;
     width: 32px;
 	background: url(images/close.png) no-repeat;
 	border:none;
+	z-index: 999;
 }
 #mo_sp_container .ui-state-default .ui-icon, #mo_sp_container .ui-widget-content .ui-icon{
 	background:none;
